<package>
  <name>hlpr_poli</name>
  <version>1.0.0</version>
  <description>Metapackage for the ROS Packages for things specific to the Poli robot configuration</description>

  <author email="vchu@gatech.edu">Vivian Chu</author>
  <maintainer email="vchu@gatech.edu">Vivian Chu</maintainer>
  
  <url type="website">https://github.com/HLP-R/hlpr_robots/wiki</url>
  <url type="bugtracker">https://github.com/HLP-R/hlpr_robots/issues</url>
  <url type="repository">https://github.com/HLP-R/hlpr_robots</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vector_description</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
