<?xml version="1.0"?>
<package>
  <name>poli_bringup</name>
  <version>0.0.1</version>
  <description>A place to bringup simulated worlds and real/simulated navigation</description>

  <maintainer email="maxwell@cs.utexas.edu">Max Svetlik</maintainer>

  <license>BSD</license>


  <build_depend>bwi_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>multi_level_map_msgs</build_depend>
  <build_depend>multi_level_map_server</build_depend>
  <build_depend>multi_level_map_utils</build_depend>
  <run_depend>bwi_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>multi_level_map_msgs</run_depend>
  <run_depend>multi_level_map_server</run_depend>
  <run_depend>multi_level_map_utils</run_depend>

  <export>
  </export>
</package>
